[gd_scene load_steps=3 format=3 uid="uid://bswr51itc8015"]

[ext_resource type="Script" path="res://Scripts/Interfaces/elevator_controls.gd" id="1_ovi6k"]
[ext_resource type="Script" path="res://Scripts/Interfaces/elevator_label.gd" id="2_vdihe"]

[node name="ElevatorControls" type="Node2D"]
script = ExtResource("1_ovi6k")

[node name="Button" type="Button" parent="."]
offset_left = 150.0
offset_top = 200.0
offset_right = 450.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 50
text = "Water
Processing"

[node name="Button2" type="Button" parent="."]
offset_left = 750.0
offset_top = 200.0
offset_right = 1050.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 50
text = "Electrical"

[node name="Button3" type="Button" parent="."]
offset_left = 1400.0
offset_top = 200.0
offset_right = 1700.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 50
text = "Entrance"

[node name="Button4" type="Button" parent="."]
offset_left = 150.0
offset_top = 550.0
offset_right = 450.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 50
text = "Floor 1"

[node name="Button5" type="Button" parent="."]
offset_left = 750.0
offset_top = 550.0
offset_right = 1050.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 50
text = "Floor 2"

[node name="Button6" type="Button" parent="."]
offset_left = 1400.0
offset_top = 550.0
offset_right = 1700.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 50
text = "Facility
Control"

[node name="ExitButton" type="Button" parent="."]
offset_left = 700.0
offset_top = 800.0
offset_right = 1100.0
offset_bottom = 1000.0
theme_override_font_sizes/font_size = 100
text = "Exit"

[node name="ElevatorLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "Your current floor is: "
script = ExtResource("2_vdihe")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
